Completed the grid section

--- a/index.html
+++ b/index.html
@@ -93,7 +93,76 @@
         </div>
     </header> 
 
-    <main>
+    <main class="max-w-7xl mx-auto">
+
+        <section class="my-[120px]">
+            
+        <div class="text-center space-y-5 mb-16">
+            <h2 class="text-3xl font-eb font-extrabold text-[#414040]">The Legal Practice Area</h2>
+            <p class="text-base font-poppins text-[#707070] w-1/2 mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+        </div>
+
+        <div class="grid grid-cols-1 lg:grid-cols-3">
+            <div class="space-y-6 p-6 text-center border-b-[1px]">
+                <img class="ml-52 lg:ml-44" src="images/business.png" alt="">
+                <h3 class="font-eb text-[#414040] font-extrabold text-3xl">Business Law</h3>
+                <p class="text-[#414040] text-base font-poppins font-normal w-[258px] m-auto">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+                </p>
+                <img class="ml-52 lg:ml-44" src="images/Frame.png" alt="">
+            </div>
+            <div class="space-y-6 border-[1px] border-[#E7E7E7] text-center p-6">
+                <img class="ml-52 lg:ml-44" src="images/criminal.png" alt="">
+                <h3 class="font-eb text-[#414040] font-extrabold text-3xl">Criminal Law</h3>
+                <p class="text-[#414040] text-base font-poppins font-normal w-[258px] m-auto">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+                </p>
+                <img class="ml-52 lg:ml-44" src="images/Frame.png" alt="">
+            </div>
+            <div class="space-y-6 text-center p-6 border-b-[1px]">
+                <img class="ml-52 lg:ml-44" src="images/child.png" alt="">
+                <h3 class="font-eb text-[#414040] font-extrabold text-3xl">Child Support</h3>
+                <p class="text-[#414040] text-base font-poppins font-normal w-[258px] m-auto">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+                </p>
+                <img class="ml-52 lg:ml-44" src="images/Frame.png" alt="">
+            </div>
+            <div class="space-y-6 p-6 text-center border-r-[1px]">
+                <img class="ml-52 lg:ml-44"  src="images/education.png" alt="">
+                <h3 class="font-eb text-[#414040] font-extrabold text-3xl">Education Law</h3>
+                <p class="text-[#414040] text-base font-poppins font-normal w-[258px] m-auto">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+                </p>
+                <img class="ml-52 lg:ml-44"  src="images/Frame.png" alt="">
+            </div>
+            <div class="space-y-6 p-6 text-center border-r-[1px]">
+                <img class="ml-52 lg:ml-44"  src="images/divorce.png" alt="">
+                <h3 class="font-eb text-[#414040] font-extrabold text-3xl">Divorce Law</h3>
+                <p class="text-[#414040] text-base font-poppins font-normal w-[258px] m-auto">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+                </p>
+                <img class="ml-52 lg:ml-44"  src="images/Frame.png" alt="">
+            </div>
+            <div class="space-y-6 text-center p-6">
+                <img class="ml-52 lg:ml-44"  src="images/tax.png" alt="">
+                <h3 class="font-eb text-[#414040] font-extrabold text-3xl">Tax Law</h3>
+                <p class="text-[#414040] text-base font-poppins font-normal w-[258px] m-auto">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+                </p>
+                <img class="ml-52 lg:ml-44"  src="images/Frame.png" alt="">
+            </div>
+        </div>
+        </section>
+
+
+        <section class="my-[120px]">
+
+            <div class="text-center space-y-5 mb-16">
+                <h2 class="text-3xl font-eb font-extrabold text-[#414040]">What Our Client Say</h2>
+                <p class="text-base font-poppins text-[#707070] w-1/2 mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+            </div>
+
+        </section>
 
     </main>
 
