--- a/index.html
+++ b/index.html
@@ -409,17 +409,21 @@
                     </div>
                 </div>
 
-                
+
                 <div class="flex-1">
                     <div class="space-y-7 sm:m-auto mt-11">
                         <!-- xs -->
-                        <input type="text" placeholder="Type here" class="block input input-bordered input-xs w-[100%] lg:w-[570px] h-[50px] max-w-xs" />
+                        <input type="text" placeholder="Type here"
+                            class="block input input-bordered input-xs w-[100%] lg:w-[570px] h-[50px] max-w-xs" />
                         <!-- sm -->
-                        <input type="text" placeholder="Type here" class="block input input-bordered input-sm w-[100%] lg:w-[570px] h-[50px] max-w-xs" />
+                        <input type="text" placeholder="Type here"
+                            class="block input input-bordered input-sm w-[100%] lg:w-[570px] h-[50px] max-w-xs" />
                         <!-- md -->
-                        <input type="text" placeholder="Type here" class="block input input-bordered input-md w-[100%] lg:w-[570px] h-[50px] max-w-xs" />
+                        <input type="text" placeholder="Type here"
+                            class="block input input-bordered input-md w-[100%] lg:w-[570px] h-[50px] max-w-xs" />
                         <!-- lg -->
-                        <input type="text" placeholder="Type here" class="block input input-bordered input-lg w-full lg:w-[570px] h-[120px] max-w-xs" />
+                        <input type="text" placeholder="Type here"
+                            class="block input input-bordered input-lg w-full lg:w-[570px] h-[120px] max-w-xs" />
                         <button class="btn bg-[#B68C5A] rounded-lg w-[100%] lg:w-[325px]">Send Message</button>
                     </div>
                 </div>
@@ -430,8 +434,49 @@
 
     </main>
 
-    <footer>
-
+    <footer class="w-[100%] m-auto footer p-10 bg-[#111] text-base-content text-white mb-10">
+        <nav>
+            <div class="space-y-6">
+                <img src="images/logo.png" alt="">
+                <p class="w-[259px] font-poppins font-poppins">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+                </p>
+            </div>
+        </nav>
+        <nav>
+            <header class="font-eb font-extrabold text-white text-[24px] mb-[40px]">Useful Links</header>
+            <a class="link link-hover font-poppins">About us</a>
+            <a class="link link-hover font-poppins">Contact</a>
+            <a class="link link-hover font-poppins">Jobs</a>
+            <a class="link link-hover font-poppins">Blog</a>
+            <a class="link link-hover font-poppins">Cases</a>
+            <a class="link link-hover font-poppins">Join us</a>
+        </nav>
+        <nav class="space-y-4">
+            <header class="font-eb font-extrabold text-[24px] mb-[20px]">Contact Us</header>
+            <a class="link link-hover font-poppins">555 4th 5t NW, Washington <br>
+                DC 20530, United States</a>
+            <a class="link link-hover font-poppins">+88 01750 000 000 <br>
+                +88 01750 000 000</a>
+            <a class="link link-hover font-poppins">info@gmail.com <br>
+                info@gmail.com</a>
+        </nav>
+        <form class="space-y-6">
+            <header class="font-eb font-extrabold text-[24px] mb-[20px]">Subscribe</header>
+            <fieldset class="form-control w-80">
+                <label class="label">
+                    <span class="label-text text-white">Subscribe for our latest & Articles. We Won’t Give You Spam
+                        Mails</span>
+                </label>
+                <div class="join">
+                    <input type="text" placeholder="Email Address" class="font-poppins rounded-xl input input-bordered join-item" />
+                    
+                    <div class="lg:flex">
+                        <button class="btn join-item bg-[#B68C5A] w-[100%]"><img src="images/arrow.svg" alt=""></button>
+                    </div>
+                </div>
+            </fieldset>
+        </form>
     </footer>
 
 </body>
