Added hover effect

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 
             <div class="hidden lg:block py-4">
                 <div class="flex justify-center items-center gap-8 opacity-70">
-                    <a href="#">Home</a>
-                    <a href="#" class="flex">Service <img src="images/Frame.svg" alt=""></a>
-                    <a href="#" class="flex">Cases <img src="images/Frame.svg" alt=""></a>
-                    <a href="#" class="flex">Blog <img src="images/Frame.svg" alt=""></a>
-                    <a href="#" class="flex">Contact Us <img src="images/Frame.svg" alt=""></a>
+                    <a href="#" class=" hover:text-orange-600">Home</a>
+                    <a href="#" class="flex hover:text-orange-600">Service <img src="images/Frame.svg" alt=""></a>
+                    <a href="#" class="flex hover:text-orange-600">Cases <img src="images/Frame.svg" alt=""></a>
+                    <a href="#" class="flex hover:text-orange-600">Blog <img src="images/Frame.svg" alt=""></a>
+                    <a href="#" class="flex hover:text-orange-600">Contact Us <img src="images/Frame.svg" alt=""></a>
                 </div>
             </div>
 
